[package]
name = "axdiskfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axdriver = { path = "../axdriver", features = ["block", "ramdisk"] }
axsync = { path = "../axsync" }
driver_block = { path = "../../crates/driver_block", features = ["ramdisk"] }
axfs_vfs = { path = "../../crates/axfs_vfs" }
axerrno = { path = "../../crates/axerrno" }
spin = "0.9"
# once_cell = "1.18.0"
bitflags = "2.2"
lazy_init = { path = "../../crates/lazy_init" }
